# strafer

./: Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.cargo/: config.toml
src/: comms.rs  main.rs
